tests/postgres/ui-common/same_param_top_and_section_only_top_map.stderr
error: sql_forge!: parameter :id has no mapping
  --> tests/postgres/tmp-ui/same_param_top_and_section_only_top_map.rs:11:23
   |
11 |             #filter = " AND id <= :id ",
   |                       ^^^^^^^^^^^^^^^^^
